change font size to use em and fix spacing

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,7 @@ nav {
   height: 120px;
   background-color: #4056A1;
   color: #FFFF;
-  font-size: 50px;
+  font-size: 2em;
   padding-left: 1.5em;
   padding-right: 1.5em;
   display: flex;
@@ -20,11 +20,15 @@ nav span {
 }
 
 nav div {
-  font-size: 25px;
+  font-size: 0.5em;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+}
+
+nav div p {
+  margin: 5px;
 }
 
 nav div i {
