--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,4 @@
-.new-tweet {
+section.new-tweet {
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -13,23 +13,24 @@ form {
   
 }
 
-#tweet-text {
-  border: #f4f1ec;
+form #tweet-text {
+  border: none;
   border-bottom: 5px solid #545149;
   background-color: #f4f1ec;
   height: 60px;
   margin-bottom: 15px;
+  margin-top: 5px;
 }
 
 
-.tweet-footer {
+div.tweet-footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 
-button {
+form button {
   font-family: 'Bungee', sans-serif;
   background-color: #4056A1;
   color: white;
